[gd_scene load_steps=2 format=3 uid="uid://b2owl01uydo7"]

[ext_resource type="Script" path="res://scenes/Components/AnimatedButton.gd" id="1_km606"]

[node name="AnimatedButton" type="Button"]
script = ExtResource("1_km606")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
